2009-03-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	* Gled/Gled.cxx:
	Cannonize GLED_BUILD defines.

2009-03-08  Matevz Tadel  <matevz.tadel@ijs.si>

	Intruduce new config header gled-config-build.h.

	* Ephra/Saturn.cxx:
	Include the new config header.

	* Gled/Gled.cxx:
	Include the new config header.
	In InitLogging() dump also svn revision and URL.

2009-03-04  Matevz Tadel  <matevz.tadel@ijs.si>

	With Jona: fixes for the Intel/Mesa 3D driver.

	* Pupils/Pupil.cxx:
	Intel/Mesa 3D driver crashes when trying to use non-existing (or
	null) GL context (ATI and NVIDIA drivers seem to survive
	this). So, make sure that GL-context is initialized before trying
	to use it:
	
	1. Call glewInit() from the draw() function of the GL context-holder
	window.

	2. In handle() we need to make the context current as renderes can be
	instantiated while querying for an object renderer. Return
	immediately if the GL-window is not in valid() state.

2009-02-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Use GLEW includes instead of system ones.

	* Pupils/Pupil.cxx:
	Call 'glewInit()' when creating the gl-context holder.

2008-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* bin/gled-auth-genkeypair:
	* bin/gled-auth-init:
	Use gled-config to obtain data-dir and thus perllib location.
	This removes dependence on GLEDSYS environment variable.

	* Makefile:
	Fiddle a bit with Darwin hacks - needs to be revisited everywhere.

2008-12-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* Gled/Gled.cxx:
	* Gled/Gled.h:
	Add TString members mLibDir, mDataDir, mHomeDir.

	Initialize them from GLEDSYS (if defined), from data passed to
	configure (stored in gled-config.h) or via command-line
	arguments. If they remain undefined, die a horrible death.

	Reshuffle initialization a bit - we have to parse command-line
	arguments before setting up some paths as lib/datadir might be
	passed in.

	Remove 'static void InitStatics()'.

	* gled.cxx:
	* saturn.cxx: